package framework;

public class Factory {

    public final void creerPartie(){
        creerDes();
        creerJoueurs();
        creerJeu();
    }
    public void creerDes(){}
    public void creerJoueurs(){}
    public void creerJeu(){}

}
