package framework;

public interface IStrategie {

    void calculerScoreTour(Jeu jeu);
    void calculerLeVainqueur(Jeu jeu);
}
