package framework;

public class Player implements Comparable<Player>{



    @Override
    public int compareTo(Player player) {
        return 0;
    }
}
