@startuml

title __FRAMEWORK's Class Diagram__\n

  namespace framework {
    class framework.DeCollection {
        - tabDe : De[]
        + add()
        + addAll()
        + clear()
        + contains()
        + containsAll()
        + isEmpty()
        + iterator()
        + remove()
        + removeAll()
        + retainAll()
        + size()
        + toArray()
        + toArray()
    }
  }
  

  namespace framework {
    class framework.PlayerCollection {
        - tabJoueur : Joueur[]
        + add()
        + addAll()
        + clear()
        + contains()
        + containsAll()
        + isEmpty()
        + iterator()
        + remove()
        + remove()
        + removeAll()
        + retainAll()
        + size()
        + toArray()
        + toArray()
    }
  }
  

  namespace framework {
    class framework.De {
        - nbFaces : int
        + De()
        + compareTo()
    }
  }
  

  namespace framework {
    class framework.Factory {
        + creerDes()
        + creerJeu()
        + creerJoueurs()
        + creerPartie()
    }
  }
  

  namespace framework {
    interface framework.IStrategie {
        {abstract} + calculerLeVainqueur()
        {abstract} + calculerScoreTour()
    }
  }
  

  namespace framework {
    abstract class framework.Jeu {
        - nbTours : int
        + calculerLeVainqueur()
        + calculerScoreTour()
    }
  }
  

  namespace framework {
    class framework.Player {
        + compareTo()
    }
  }
  

  namespace framework {
    class framework.TabIterator {
        - tab : Object[]
        + TabIterator()
        + hasNext()
        + next()
    }
  }
  

  framework.DeCollection .up.|> java.util.Collection
  framework.PlayerCollection .up.|> java.util.Collection
  framework.De .up.|> java.lang.Comparable
  framework.Jeu o-- framework.DeCollection : des
  framework.Jeu o-- framework.PlayerCollection : joueurs
  framework.Jeu o-- framework.IStrategie : strategie
  framework.Player .up.|> java.lang.Comparable
  framework.TabIterator .up.|> java.util.Iterator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
